# Ufanet_practice

./: Dockerfile  config.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  save
Ufanet_practice/: asgi.py  settings.py  urls.py  wsgi.py
discounts_app/: admin.py  models.py  views.py
discounts_app/migrations/: 0001_initial.py  0002_remove_company_company_category.py  0003_discountcategory_image_alter_discountcard_bonus_code.py  0004_discountcard_offers_category.py  0005_alter_discountcard_image.py  0006_remove_discountcard_bonus_code.py
static/css/: styles.css
templates/: base.html  categories.html  discounts.html
tests/: test_models.py  test_views.py
